@@ -1,3 +1,27 @@
+#
+# Copyright (c) 2007, 2008 Agostino Russo
+# Python port of wubi/disckimage/main.c by Hampus Wessman
+#
+# Written by Agostino Russo <agostino.russo@gmail.com>
+#
+# win32.ui is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as
+# published by the Free Software Foundation; either version 2 of
+# the License, or (at your option) any later version.
+#
+# win32.ui is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+#
+
+'''
+Allocates disk space for the virtual disk
+'''
+
 import ctypes
 from ctypes import c_long
 from winui.defs import *
@@ -5,21 +29,22 @@ import sys
 import logging
 log = logging.getLogger('Virtualdisk')
 
-create_file = ctypes.windll.kernel32.CreateFileW
-close_handle = ctypes.windll.kernel32.CloseHandle
-set_file_pointer = ctypes.windll.kernel32.SetFilePointerEx
-set_end_of_file = ctypes.windll.kernel32.SetEndOfFile
-get_version = ctypes.windll.kernel32.GetVersion
-write_file = ctypes.windll.kernel32.WriteFile
-
 def create_virtual_disk(path, size_mb):
+    '''
+    Fast allocation of disk space
+    This is done by using the windows API
+    The initial and final block are zeroed
+    '''
     log.debug(" Creating virtual disk %s of %sMB" % (path, size_mb))
-    clear_bytes = 4000000
+    clear_bytes = 1000000
     if not size_mb or size_mb < 1:
         return
 
+    # Get Permission
+    grant_privileges()
+
     # Create file
-    file_handle = create_file(
+    file_handle = CreateFileW(
         unicode(path),
         GENERIC_READ | GENERIC_WRITE,
         0,
@@ -31,25 +56,25 @@ def create_virtual_disk(path, size_mb):
         log.exception("Failed to create file %s" % path)
 
     # Set pointer to end of file */
-    file_pos = ctypes.c_longlong(0)
+    file_pos = LARGE_INTEGER
     file_pos.QuadPart = size_mb*1024
-    if not set_file_pointer(file_handle, file_pos, 0, FILE_BEGIN):
+    if not SetFilePointerEx(file_handle, file_pos, 0, FILE_BEGIN):
         log.exception("Failed to set file pointer to end of file")
 
     # Set end of file
-    if not set_end_of_file(file_handle):
+    if not SetEndOfFile(file_handle):
         log.exception("Failed to extend file. Not enough free space?")
 
     # Set valid data (if possible), ignore errors
-    call_SetFileValidData(file_handle, c_longlong(size_mb*1024));
+    call_SetFileValidData(file_handle, file_pos)
 
     # Set pointer to beginning of file
-    file_pos.QuadPart = 0;
-    result = set_file_pointer(
+    file_pos.QuadPart = 0
+    result = SetFilePointerEx(
                    file_handle,
                    file_pos,
                    NULL,
-                   FILE_BEGIN);
+                   FILE_BEGIN)
     if not result:
         log.exception("Failed to set file pointer to beginning of file")
 
@@ -57,19 +82,46 @@ def create_virtual_disk(path, size_mb):
     zero_file(file_handle, clear_bytes)
 
     # Set pointer to end - clear_bytes of file
-    file_pos.QuadPart = -clear_bytes-2;
-    result = set_file_pointer(
+    file_pos.QuadPart = -clear_bytes-2
+    result = SetFilePointerEx(
                    file_handle,
                    file_pos,
                    NULL,
-                   FILE_END);
+                   FILE_END)
     if not result:
         log.exception("Failed to set file pointer to end - clear_bytes of file")
 
     # Zero file
     zero_file(file_handle, clear_bytes)
 
-    close_handle(file_handle)
+    CloseHandle(file_handle)
+
+def grant_privileges():
+    # For version < Windows NT, no privileges are involved
+    full_version = sys.getwindowsversion()
+    major, minor, build, platform, txt = full_version
+    if platform < 2:
+        log.debug("Skipping grant_privileges, because Windows 95/98/ME was detected")
+        return
+
+    # SetFileValidData() requires the SE_MANAGE_VOLUME_NAME privilege, so we must enable it
+    #   on the process token. We don't attempt to strip the privilege afterward as that would
+    #  introduce race conditions. */
+    handle = ctypes.c_long(0)
+    if OpenProcessToken(GetCurrentProcess(), TOKEN_ADJUST_PRIVILEGES|TOKEN_QUERY, byref(handle)):
+        luid = LUID
+        if LookupPrivilegeValue(NULL, SE_MANAGE_VOLUME_NAME, POINTER(luid)):
+            tp = TOKEN_PRIVILEGES
+            tp.PrivilegeCount = 1
+            tp.Privileges[0].Luid = luid
+            tp.Privileges[0].Attributes = SE_PRIVILEGE_ENABLED
+            if not AdjustTokenPrivileges(handle, FALSE, POINTER(tp), 0, NULL, NULL):
+                log.debug("grant_privileges: AdjustTokenPrivileges() failed.")
+        else:
+            log.debug("grant_privileges: LookupPrivilegeValue() failed.")
+        CloseHandle(handle)
+    else:
+        log.debug("grant_privileges: OpenProcessToken() failed.")
 
 def call_SetFileValidData(file_handle, size_bytes):
     # No need, Windows 95/98/ME do this automatically anyway.
@@ -96,12 +148,12 @@ def zero_file(file_handle, clear_bytes):
        bytes_to_write = buf_size
        if (bytes_to_write > clear_bytes - bytes_cleared):
            bytes_to_write = clear_bytes - bytes_cleared
-       result = write_file(
+       result = WriteFile(
                    file_handle,
                    write_buf,
                    bytes_to_write,
                    byref(n_bytes_written),
-                   NULL);
+                   NULL)
        if not result or not n_bytes_written:
            log.exception("WriteFile() failed!")
        bytes_cleared += n_bytes_written
