@@ -72,5 +72,8 @@ wubi (9.04) UNRELEASED; urgency=low
     and a previous installation is detected
   * Path joining whith a drive as first item whitout trailing slash was
     returning the user home directory
+  * Improved download manager
+  * Added mirror selection
+  * Fixed MD5 calculation which was limited to files less than 100MB
 
- -- Agostino Russo <agostino.russo@gmail.com>  Fri, 09 Jan 2009 08:45:05 +0000
+ -- Agostino Russo <agostino.russo@gmail.com>  Sat, 10 Jan 2009 00:59:00 +0000
